<resources>
    <string name="app_name">Test Movie DB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="review_by">A review by %s</string>
    <string name="no_review">No Review</string>
    <string name="favorites">Favorites</string>
    <string name="read_more">Read More</string>
</resources>