<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.category.CategoryBottomSheetFragment">

        <TextView
            android:id="@+id/popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/popular"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/upcoming"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/top_rated"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/now_playing"
            android:textSize="18sp" />

    </LinearLayout>
</layout>