<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lingga.testmoviedb.ui.detail.MovieDetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.MovieDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/poster"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:scaleType="centerCrop"
                            app:imageMovie="@{viewModel.movie.posterPath}"
                            app:layout_constraintDimensionRatio="H,1.1:2"
                            app:layout_constraintEnd_toStartOf="@id/guideline"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription"
                            tools:src="@color/blue" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.4" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@{viewModel.movie.title}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/button_favorite"
                            app:layout_constraintStart_toEndOf="@id/poster"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Movie Title" />

                        <TextView
                            android:id="@+id/release_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@{viewModel.movie.releaseDate}"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="@id/title"
                            app:layout_constraintTop_toBottomOf="@id/title"
                            tools:text="release_date" />

                        <TextView
                            android:id="@+id/label_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/overview"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@id/title"
                            app:layout_constraintTop_toBottomOf="@id/release_date" />


                        <TextView
                            android:id="@+id/overview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif"
                            android:maxLines="4"
                            android:text="@{viewModel.movie.overview}"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/title"
                            app:layout_constraintTop_toBottomOf="@id/label_overview"
                            tools:text="@tools:sample/lorem/random" />

                        <TextView
                            android:id="@+id/read_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/read_more"
                            android:textColor="@color/blue"
                            app:layout_constraintStart_toStartOf="@id/title"
                            app:layout_constraintTop_toBottomOf="@id/overview" />

                        <ImageView
                            android:id="@+id/button_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/ic_baseline_favorite_border"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/title"
                            tools:ignore="ContentDescription" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.core.widget.NestedScrollView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/label_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_movie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_review"
                tools:listitem="@layout/item_list_review" />

            <TextView
                android:id="@+id/label_empty_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/no_review"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/label_review"
                tools:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>